feat: first pass at adding the feature

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/encodings.xml
+/.idea/gradle.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
+/app/
 .externalNativeBuild
 .cxx
