--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
