--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.khojak">
+    package="edu.neu.khojak">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!--
@@ -21,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name="edu.neu.khojak.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,19 +28,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LocationReminder.LocationReminderUpdated"
+            android:name="edu.neu.khojak.LocationReminder.LocationReminderUpdated"
             android:label="@string/location_reminder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".LocationTracker.LocationTracker"
+            android:name="edu.neu.khojak.LocationTracker.LocationTracker"
             android:label="@string/location_tracker"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".HomePage"
+            android:name="edu.neu.khojak.HomePage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".LocationReminder.TODOList.ReminderInfo" />
+        <activity android:name="edu.neu.khojak.LocationReminder.TODOList.ReminderInfo" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -51,10 +50,10 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity
-            android:name=".LocationReminder.TODOList.LocationActivity"
+            android:name="edu.neu.khojak.LocationReminder.TODOList.LocationActivity"
             android:label="@string/title_activity_location" />
         <activity
-            android:name=".LocationReminder.TODOList.TODOListPersonal"
+            android:name="edu.neu.khojak.LocationReminder.TODOList.TODOListPersonal"
             android:label="@string/location_reminder"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -62,7 +61,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <service android:name=".LocationReminder.TODOList.NotificationService" />
+        <service android:name="edu.neu.khojak.LocationReminder.TODOList.NotificationService" />
     </application>
 
 </manifest>
