--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
