--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="edu.neu.khojak.LocationReminder.CombinedReminders"
+            android:name=".LocationTracker.PendingRequests"
+            android:label="@string/title_activity_pending_requests"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".LocationReminder.CombinedReminders"
             android:label="@string/title_activity_reminders"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <activity android:name="edu.neu.khojak.LoginActivity">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,19 +36,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.neu.khojak.LocationReminder.LocationReminderUpdated"
+            android:name=".LocationReminder.LocationReminderUpdated"
             android:label="@string/location_reminder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="edu.neu.khojak.LocationTracker.LocationTracker"
+            android:name=".LocationTracker.LocationTracker"
             android:label="@string/location_tracker"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="edu.neu.khojak.HomePage"
+            android:name=".HomePage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name="edu.neu.khojak.LocationReminder.TODOList.ReminderInfo" />
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".LocationReminder.TODOList.ReminderInfo" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -57,25 +57,24 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity
-            android:name="edu.neu.khojak.LocationReminder.TODOList.LocationActivity"
+            android:name=".LocationReminder.TODOList.LocationActivity"
             android:label="@string/title_activity_location" />
         <activity
-            android:name="edu.neu.khojak.LocationReminder.TODOList.TODOListPersonal"
+            android:name=".LocationReminder.TODOList.TODOListPersonal"
             android:label="@string/location_reminder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LocationReminder.TODOList.ReminderLocationView" />
-
         <activity
-            android:name="edu.neu.khojak.LocationReminder.GroupDetails"
+            android:name=".LocationReminder.GroupDetails"
             android:label="@string/tab_text_2"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name="edu.neu.khojak.LocationReminder.CreateGroup" />
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LocationReminder.CreateGroup" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <service android:name="edu.neu.khojak.LocationReminder.Service.NotificationService" />
+        <service android:name=".LocationReminder.Service.NotificationService" />
     </application>
 
 </manifest>
