changes for the search bar and Tracking service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
             android:value="@string/google_maps_key" />
 
         <service android:name="edu.neu.khojak.LocationReminder.Service.NotificationService" />
+        <service android:name="edu.neu.khojak.LocationReminder.Service.TrackingService" />
     </application>
 
 </manifest>
