--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
 }
